Add html file for validation form

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             required
           ></textarea
           ><br /><br />
-          <span class="error"></span>
+          <div class="alert_msg fade"></div>
           <button type="submit" class="contact-button">Send A Message</button>
         </form>
         <hr class="bottom-line" />
@@ -276,7 +276,8 @@
     </main>
     <div id="modal-div"></div>
     <!-- <div class="overlay"></div> -->
-    <script src="./JS/script.js"></script>
-    <script src="./JS/modal.js"></script>
+    <script src="./js/validation.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
