Edit validation form codes

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
         <form id="form" action="https://formspree.io/f/mayadbao" method="POST">
           <div class="data">
-            <input
+            <!-- <input
               type="text"
               class="contact-element fname-input"
               name="user-fname"
@@ -230,7 +230,7 @@
               placeholder="Last Name"
               maxlength="30"
               required
-            />
+            /> -->
             <input
               type="text"
               class="contact-element for-mobile"
