Fix linter errors

--- a/index.html
+++ b/index.html
@@ -123,84 +123,7 @@
         <div class="middle-section">
           <h3>My recent work</h3>
           <hr class="first-line" />
-          <div class="stories">
-            <!-- <div class="story-left">
-              <div class="rect"></div>
-              <div class="desc">
-                <h4>Multi-Purpose Stories</h4>
-                <p>
-                  A daily selection of privately personalized reads; no accounts
-                  or sign-ups required. has been the industry's standard dummy
-                  text ever since the 1500s, when an unknown printer took a
-                  standard dummy text.
-                </p>
-                <div class="skills">
-                  <p class="stack">css</p>
-                  <p class="stack">html</p>
-                  <p class="stack">bootstrap</p>
-                  <p class="stack">Ruby</p>
-                </div>
-                <button type="button" class="project-btn">See Project</button>
-              </div>
-            </div> -->
-            <!-- <div class="story-left invert">
-              <div class="desc">
-                <h4>Multi-Purpose Stories</h4>
-                <p>
-                  A daily selection of privately personalized reads; no accounts
-                  or sign-ups required. has been the industry's standard dummy
-                  text ever since the 1500s, when an unknown printer took a
-                  standard dummy text.
-                </p>
-                <div class="skills">
-                  <p class="stack">css</p>
-                  <p class="stack">html</p>
-                  <p class="stack">bootstrap</p>
-                  <p class="stack">Ruby</p>
-                </div>
-                <button type="button" class="project-btn">See Project</button>
-              </div>
-              <div class="rect"></div>
-            </div>
-            <div class="story-left">
-              <div class="rect"></div>
-              <div class="desc">
-                <h4>Multi-Purpose Stories</h4>
-                <p>
-                  A daily selection of privately personalized reads; no accounts
-                  or sign-ups required. has been the industry's standard dummy
-                  text ever since the 1500s, when an unknown printer took a
-                  standard dummy text.
-                </p>
-                <div class="skills">
-                  <p class="stack">css</p>
-                  <p class="stack">html</p>
-                  <p class="stack">bootstrap</p>
-                  <p class="stack">Ruby</p>
-                </div>
-                <button type="button" class="project-btn">See Project</button>
-              </div>
-            </div>
-            <div class="story-left invert">
-              <div class="desc">
-                <h4>Multi-Purpose Stories</h4>
-                <p>
-                  A daily selection of privately personalized reads; no accounts
-                  or sign-ups required. has been the industry's standard dummy
-                  text ever since the 1500s, when an unknown printer took a
-                  standard dummy text.
-                </p>
-                <div class="skills">
-                  <p class="stack">css</p>
-                  <p class="stack">html</p>
-                  <p class="stack">bootstrap</p>
-                  <p class="stack">Ruby</p>
-                </div>
-                <button type="button" class="project-btn">See Project</button>
-              </div>
-              <div class="rect"></div>
-            </div>
-          </div> -->
+          <div class="stories"></div>
         </div>
       </section>
       <section class="contact" id="Contact-section">
