Add javascript to local storage file

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
               type="text"
               class="contact-element for-mobile"
               name="user-lname"
+              id="full-name"
               placeholder="First and Last Name"
               maxlength="30"
               required
@@ -201,5 +202,6 @@
     <script src="./js/validation.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/localstorage.js"></script>
   </body>
 </html>
