Made changes to form input

--- a/index.html
+++ b/index.html
@@ -145,15 +145,7 @@
               placeholder="Jeremy"
               maxlength="30"
               required
-            /><br class="custom" />
-            <input
-              type="text"
-              class="contact-element"
-              name="user-lname"
-              placeholder="Last Name"
-              maxlength="30"
-              required
-            /> -->
+            /><br class="custom" /> -->
             <input
               type="text"
               class="contact-element for-mobile"
